// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:styled:QuestionButton renders the QuestionButton and CSS properties properly 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": undefined,
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  background-color: #ededed;
  border: none;
  border-radius: 5px 0 0 5px;
  color: ",
          [Function],
          ";
  height: 42px;
  outline: none;
  width: 48px;
",
        ],
      },
      "displayName": "QuestionButton",
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "button",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  Click Me
</StyledComponent>
`;

exports[`components:styled:QuestionButton renders the QuestionButton and CSS properties properly when enabled 1`] = `
<StyledComponent
  enabled={true}
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": undefined,
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  background-color: #ededed;
  border: none;
  border-radius: 5px 0 0 5px;
  color: ",
          [Function],
          ";
  height: 42px;
  outline: none;
  width: 48px;
",
        ],
      },
      "displayName": "QuestionButton",
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "button",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  Click Me!
</StyledComponent>
`;
